--- a/spices/cix-tar.org
+++ b/spices/cix-tar.org
@@ -1,6 +1,6 @@
 # File          : cix-tar.org
 # Created       : <2016-11-04 Fri 22:42:50 GMT>
-# Modified      : <2017-9-27 Wed 23:01:39 BST> sharlatan
+# Modified      : <2017-12-14 Thu 01:28:16 GMT> Sharlatan
 # Author        : sharlatan
 # Maintainer(s) :
 # Sinopsis      : File archiving program
@@ -47,4 +47,9 @@ extart *.tar.gz, *.tar.bz2 files:
 copy via tar pipe while preserving file permissions:
 :    ~$ tar -C source_path -cpf - . | tar -C target_path -xf -
 
+**** tar-171214012632
+maximized compression with xz archiver:
+:    ~$ XZ_OPT=-9e tar cJf tarfile.tar.xz directory
+:    ~$ tar -cf - directory/ | xz -9 -c - > tarfie.tar.xz 
+[[file::*xz][xz]]
 # End of cix-tar.org
