--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File           : README.org
 # Created        : <2016-11-16 Wed 00:51:06 GMT>
-# Last Modified  : <2017-12-14 Thu 01:28:37 GMT> Sharlatan
+# Last Modified  : <2017-12-18 Mon 01:22:15 GMT> Sharlatan
 # Author         : sharlatan
 # Short          : README-en
 
@@ -56,6 +56,7 @@ QTY  CMD       PKG
 15   awk       gawk
 10   find      gnu-findutils
 10   dd        gnu-coreutils
+7    chmod     gnu-coreutils
 5    strace    strace
 5    mount     util-linux
 5    ls        gnu-coreutils
@@ -116,6 +117,6 @@ QTY  CMD       PKG
 
 Distribution per example:
 
-Onliners:  216
+Onliners:  228
 Scripts:   108
 #+END_SRC
