--- a/spices/cix-micro.org
+++ b/spices/cix-micro.org
@@ -1,6 +1,6 @@
 # File           : cix-micro.org
 # Created        : <2017-08-07 Mon 00:27:45 BST>
-# Modified       : <2017-8-20 Sun 12:10:09 BST> sharlatan
+# Modified       : <2017-9-25 Mon 21:56:23 BST> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Sinopsis       : A modern and intuitive terminal-based text editor
@@ -17,10 +17,13 @@
 | *Info*          | [[https://micro-editor.github.io/][micro.web]]       |
 |-----------------+-----------------|
 
-
+Micro is a terminal-based text editor that aims to be easy to use and intuitive,
+while also taking advantage of the full capabilities of modern terminals. It
+comes as one single, batteries-included, static binary with no dependencies, and
+you can download and use it right now.
 -----
 * Index
 * Receipts
 * Refreances
 
-  # End of cix-micro.org
+# End of cix-micro.org
