--- a/spices/cix-gnu-bash.org
+++ b/spices/cix-gnu-bash.org
@@ -1,6 +1,6 @@
 # File          : cix-gnu-bash-builtin.org
 # Created       : <2015-11-07 Mon 00:07:40 GMT>
-# Modified      : <2017-10-13 Fri 18:51:17 BST> sharlatan
+# Modified      : <2017-10-13 Fri 20:55:55 BST> sharlatan
 # Author        : sharlatan
 # Maintainer(s) :
 # Sinopsis      : The GNU Bourne Again shell
@@ -237,13 +237,14 @@ list of all environment varialbes used in current session:
 ulimit [OPTION] [SHabcdefilmnpqrstuvxT] [LIMIT]
 
 ** while                                                                        :cmd:
+/Execute commands as long as a test succeed/
 *** while::examples
 **** while-171013184352
 #+BEGIN_SRC sh
   #!/usr/bin/env bash
 
-  _while_read()
-  { # Read from a file or stdin 
+  _while_read_line()
+  { # Read from a file or stdin line by line
 
       while IFS= read -r line; do
           printf "%s\n" "$line"
@@ -252,11 +253,35 @@ ulimit [OPTION] [SHabcdefilmnpqrstuvxT] [LIMIT]
 
   main()
   {
-     _while_read "$@" 
+     _while_read_line "$@" 
   }
 
   main "$@"
   # End of script
+#+END_SRC
+
+**** while171013205439
+#+BEGIN_SRC sh
+  #!/usr/bin/env bash
+
+  _while_read_word()
+  { # Read from a file or stdin word by word
+
+      while IFS= read -r line; do
+          while IFS= read -r word; do
+              printf "%s\n" "$word"
+          done
+      done < "${1:-/dev/stdin}"
+  }
+
+  main()
+  {
+     _while_read_word "$@" 
+  }
+
+  main "$@"
+  # End of script
+
 #+END_SRC
 * Receipts::variables
 ** PIPESTATUS
